--- a/src/Style/HomeStyle/InformationStyle/style.css
+++ b/src/Style/HomeStyle/InformationStyle/style.css
@@ -8,8 +8,12 @@
     padding-right: 16px;
 }
 .content-section > h2{
+    font-family: "Times New Roman", Georgia, serif;
     text-align: center;
-    font-size: 50px;
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 .section-sub-heading {
     text-align: center;
@@ -19,8 +23,37 @@
     opacity: 0.5;
 }
 .about-text {
-    margin-top: 25px;
-    font-size: 30px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.6;
     text-align: justify;
-    line-height: 1.4;
+}
+/*  mini banner */
+.box-mini-banner{
+    width: 800px;
+    height: 200px;
+}
+.box-mini-banner >ul{
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    display: flex;
+    gap: 40px;
+}
+.box-mini-banner li{
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;  /* Sắp xếp theo chiều dọc */
+    justify-content: center; /* Căn giữa theo chiều dọc */
+    align-items: center;     /* Căn giữa theo chiều ngang */
+}
+.img-mini-banner{
+    border-radius: 15px;
+    margin: 0px;
+    width: 70%;
+    height: 80%;
 }
